small revert to stopgap issue with twitter images

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -323,6 +323,10 @@ a:hover{
 }
 */
 
+.popup{
+	background-color: #fff !important;
+}
+
 .credit{
 	text-decoration: underline;
 	img{
